WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66455
A SharedWorker constructor should throw TypeError, when the number of arguments is not enough
https://bugs.webkit.org/show_bug.cgi?id=66455
Summary
A SharedWorker constructor should throw TypeError, when the number of argumen...
Kentaro Hara
Reported
2011-08-18 01:49:01 PDT
Currently, a SharedWorker constructor throws SyntaxError, when the number of arguments is not enough. However, the spec requires TypeError in that case (
http://www.w3.org/TR/WebIDL/#es-operations
). FYI: This is a part of the patch for
bug 65839
.
Attachments
Patch
(4.27 KB, patch)
2011-08-18 01:54 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
Patch
(4.41 KB, patch)
2011-08-18 04:00 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2011-08-18 01:54:40 PDT
Created
attachment 104315
[details]
Patch
Adam Barth
Comment 2
2011-08-18 02:46:13 PDT
Comment on
attachment 104315
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=104315&action=review
> Source/WebCore/ChangeLog:7 > + Reviewed by NOBODY (OOPS!). > +
Can you add a reference to the spec?
Kentaro Hara
Comment 3
2011-08-18 04:00:07 PDT
Created
attachment 104320
[details]
Patch
WebKit Review Bot
Comment 4
2011-08-18 13:09:26 PDT
Comment on
attachment 104320
[details]
Patch Clearing flags on attachment: 104320 Committed
r93339
: <
http://trac.webkit.org/changeset/93339
>
WebKit Review Bot
Comment 5
2011-08-18 13:09:31 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6
2011-08-23 11:29:23 PDT
***
Bug 66275
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug