A SharedWorker constructor should throw TypeError, when the number of arguments is not enough. https://bugs.webkit.org/show_bug.cgi?id=66455

Patch by Kentaro Hara <haraken@google.com> on 2011-08-18
Reviewed by Adam Barth.

The spec is here: http://www.w3.org/TR/WebIDL/#es-operations.

Source/WebCore:

Test: fast/workers/shared-worker-constructor.html

* bindings/js/JSSharedWorkerCustom.cpp:
(WebCore::JSSharedWorkerConstructor::constructJSSharedWorker): Changed SyntaxError to TypeError.
* bindings/v8/custom/V8SharedWorkerCustom.cpp:
(WebCore::V8SharedWorker::constructorCallback): Changed SyntaxError to TypeError.

LayoutTests:

* fast/workers/shared-worker-constructor-expected.txt: Changed SyntaxError to TypeError.

Canonical link: https://commits.webkit.org/82335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93339 268f45cc-cd09-0410-ab3c-d52691b4dbfc